fix: svg background spacing bug (#739)

--- a/src/wmnds/patterns/travel-mode-page-banner/_travel-mode-page-banner.scss
+++ b/src/wmnds/patterns/travel-mode-page-banner/_travel-mode-page-banner.scss
@@ -68,7 +68,6 @@
     color: currentColor;
   }
 
-
   &__copy {
     max-width: 100%;
   }
@@ -100,7 +99,6 @@
   }
 
   @media screen and (min-width: $breakpoint-md) {
-
     &__content {
       width: 50%;
       min-height: 300px;
@@ -124,10 +122,9 @@
       position: absolute;
       z-index: 2;
       top: 0;
-      left: 0;
+      left: -3px;
       height: 100%;
     }
-
   }
 
   // only for IE 11
@@ -137,6 +134,3 @@
     }
   }
 }
-
-
-
